apps/wallabag/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  namespace: wallabag
  labels:
    app.kubernetes.io/name: wallabag
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: wallabag
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wallabag
    spec:
      containers:
        - name: wallabag
          image: "wallabag/wallabag"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
