apps/wallabag/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: wallabag
  labels:
    app.kubernetes.io/name: wallabag
spec:
  selector:
    app.kubernetes.io/name: wallabag
  ports:
    - port: 80
      targetPort: 80
