apps/wallabag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag
  namespace: wallabag
  labels:
    app.kubernetes.io/name: wallabag
  annotations:
    gethomepage.dev/name: wallabag
    gethomepage.dev/description: Read later
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: wallabag.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=wallabag"
spec:
  tls:
    - hosts:
        - wallabag.totorinho.duckdns.org
      secretName: duckdns-wildcard-cert-totorinho.duckdns.org
  rules:
    - host: wallabag.totorinho.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wallabag
                port:
                  number: 80
